examples/test/testpolicy4228.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4228
  namespace: namespace237
spec:
  podSelector:
    matchLabels:
      key43: value44
      key5: value7
      key45: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value19
      podSelector:
        matchLabels:
          key2: value4
          key33: value7
          key46: value6
